add_library(entities
        base_camera_model.h
        track.cpp track.h
        point_3d.cpp point_3d.h
        camera.cpp camera.h
        visibility_pyramid.cpp visibility_pyramid.h
        point_2d.cpp point_2d.h
        image.cpp image.h
        pinhole_camera_model.cpp pinhole_camera_model.h
        radial_camera_model.cpp radial_camera_model.h)